Fix tautological compare in launch_util.cc

-1 is not a valid value for the extensions::LaunchContainer enum. We can
use NUM_LAUNCH_CONTAINERS as the sentinel value instead.

Recent Clang versions were warning like this:

  ../../chrome/browser/extensions/launch_util.cc:140:14: warning: comparison of
  constant -1 with expression of type 'extensions::LaunchContainer' is always
  false [-Wtautological-constant-out-of-range-compare]
    if (result == kInvalidLaunchContainer) {
	~~~~~~ ^  ~~~~~~~~~~~~~~~~~~~~~~~

Bug: 793189
Change-Id: I82322dfe363606c37468856929420334a9cd1b3e